<resources>
    <string name="app_name">Assignment 1</string>
    <string name="currently_no_book">There are no book in your reading list, go ahead add a new book</string>
    <string name="book_name">Name of the book</string>
    <string name="update">update</string>
    <string name="page_number">page number</string>
    <string name="name">name</string>
    <string name="so_far_you_read">Track your monthly reading progress...</string>
    <string name="get_page">Get page #</string>
    <string name="_0">0</string>
    <string name="add_new_book">Add new book</string>
    <string name="add">add</string>
    <string name="scan">scan</string>
    <string name="book_image">book image</string>
    <string name="sort_by_name">sort reading list by book name</string>
    <string name="sort_by_value">sort reading list by page value</string>
    <string name="show_collection">show reading list books collection</string>
    <string name="monthly_reading_goal">New Reading Goal (default 100)</string>
    <string name="change">change</string>
    <string name="settings">settings</string>
    <string name="scroll_view_for_reading_list">scroll view for reading list</string>

</resources>