<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/root"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/bSettings"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:background="@drawable/baseline_settings_black_48"
        android:contentDescription="@string/settings"

        app:layout_constraintBottom_toTopOf="@+id/tvPagesRead"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.95"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvPagesRead"
        android:layout_width="match_parent"
        android:layout_marginHorizontal="12sp"
        android:layout_height="60dp"
        android:background="@drawable/black"
        android:padding="12sp"
        android:hint="@string/so_far_you_read"
        android:textSize="14sp"
        android:textColorHint="#757575"
        android:textColor="@color/black"

        app:layout_constraintBottom_toTopOf="@+id/etBookName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/bSettings" />

    <EditText
        android:id="@+id/etBookName"
        android:layout_width="180sp"
        android:layout_height="48dp"
        android:autofillHints=""

        android:hint="@string/name"
        android:textColorHint="#757575"
        app:layout_constraintBottom_toTopOf="@+id/etPageNumber"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvPagesRead"
        tools:ignore="TextFields" />

    <EditText
        android:id="@+id/etPageNumber"
        android:layout_width="180dp"
        android:layout_height="48dp"
        android:autofillHints=""

        android:hint="@string/page_number"
        android:textColorHint="#757575"
        app:layout_constraintBottom_toTopOf="@id/bUpdate"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etBookName"
        tools:ignore="TextFields" />

    <Button
        android:id="@+id/bUpdate"
        android:layout_width="120dp"
        android:layout_height="48dp"
        android:text="@string/update"

        android:textColor="#212121"
        app:cornerRadius="15dp"
        app:layout_constraintBottom_toTopOf="@id/tvReadingList"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etPageNumber"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/bSortByName"
        android:layout_width="48sp"
        android:layout_height="48sp"
        android:background="@drawable/baseline_sort_by_alpha_black_48"
        android:contentDescription="@string/sort_by_name"

        app:layout_constraintBottom_toTopOf="@+id/tvReadingList"
        app:layout_constraintEnd_toStartOf="@+id/bSortByValue"
        app:layout_constraintStart_toStartOf="@+id/tvReadingList"
        app:layout_constraintTop_toBottomOf="@+id/bUpdate" />

    <Button
        android:id="@+id/bSortByValue"
        android:layout_width="48sp"
        android:layout_height="48sp"
        android:background="@drawable/baseline_sort_black_48"
        android:contentDescription="@string/sort_by_value"

        app:layout_constraintBottom_toTopOf="@+id/tvReadingList"
        app:layout_constraintStart_toEndOf="@id/bSortByName"
        app:layout_constraintEnd_toStartOf="@+id/bShowCollection"
        app:layout_constraintTop_toBottomOf="@+id/bUpdate" />

    <Button
        android:id="@+id/bShowCollection"
        android:layout_width="48sp"
        android:layout_height="48sp"
        android:textSize="11sp"
        android:background="@drawable/baseline_shelves_black_48"
        android:contentDescription="@string/show_collection"

        app:layout_constraintBottom_toTopOf="@+id/tvReadingList"
        app:layout_constraintStart_toEndOf="@id/bSortByValue"
        app:layout_constraintEnd_toEndOf="@+id/tvReadingList"
        app:layout_constraintTop_toBottomOf="@+id/bUpdate" />

    <!--  TODO: sort by time added  -->

    <TextView
        android:id="@+id/tvReadingList"
        android:layout_width="362dp"
        android:layout_height="200dp"
        android:background="@drawable/black"
        android:hint="@string/currently_no_book"
        android:paddingHorizontal="24sp"
        android:paddingVertical="12sp"
        android:scrollbars="vertical"
        android:textColor="@color/black"
        android:textColorHint="#616161"

        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@id/bAddNewBook"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/bUpdate" />


    <Button
        android:id="@+id/bAddNewBook"
        android:layout_width="160dp"
        android:layout_height="48dp"
        android:text="@string/add_new_book"

        app:cornerRadius="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvReadingList"
        tools:ignore="TextContrastCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>
